# fastrag

./: .gitignore  .sesskey  README.md  chunk_data.py  pyproject.toml  scrape_url.py
docs/: best_practices.md  fasthtml_ref.md
utils/: batch.py  claude_service.py  database.py  scraper.py
